# deta-space-actions

./: README.md  pyproject.toml  requirements.txt
deta_space_actions/: __init__.py  actions.py  input.py  invocation.py  view.py  views.py
